--- a/no2-3d.html
+++ b/no2-3d.html
@@ -66,6 +66,7 @@
           <p class="lead text-muted">메타부동산은 매물의 정보를 확인하고 Unity를 통해 3D로 직접 집 내부를 체험할 수 있게 합니다.</p>
             <a href="C:\Users\minhopark\Desktop\캡스톤디자인\2214858830.zip" type="button" class="btn btn-outline-secondary">3D 구경 시작하기</a>
             <a href="inf2.html" type="button" class="btn btn-outline-secondary">상세정보</a>
+           <img src="ref/Images/explain2.png" alt=""/>    
           </div>
         </div>
       </div>
