--- a/no1-3d.html
+++ b/no1-3d.html
@@ -42,61 +42,62 @@
 <body>   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="ref/images/logo.png" width="35" height="30" class="d-inline-block align-text-top">
-        메타부동산</a>
+        메타부동산
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   <main>
-  <section class="py-5 text-center container">
-    <div class="jumbotron">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light"><strong>3D 구경</strong></h1>
-          <p class="lead text-muted">메타부동산은 매물의 정보를 확인하고 Unity를 통해 3D로 직접 집 내부를 체험할 수 있게 합니다.</p>
+    <section class="py-5 text-center container">
+      <div class="jumbotron">
+        <div class="row py-lg-5">
+          <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light"><strong>3D 구경</strong></h1>
+            <p class="lead text-muted">메타부동산은 매물의 정보를 확인하고 Unity를 통해 3D로 직접 집 내부를 체험할 수 있게 합니다.</p>
             <a href="C:\Users\minhopark\Desktop\캡스톤디자인\2215929011.zip" type="button" class="btn btn-outline-secondary">3D 구경 시작하기</a>
             <a href="inf1.html" type="button" class="btn btn-outline-secondary">상세정보</a>
-           <img src="ref/Images/explain1.png" alt=""/>         
+            <img src="ref/Images/explain1.png" alt=""/>         
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="py-5 text-center container">
-    <div class="jumbotron">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light"><strong>조작방법</strong></h1>
-          <p class="lead text-muted">방향키 조작을 통해 이동할 수 있습니다.
-           <img src="ref/Images/방향키.png" alt=""/> 
+    </section>
+    <section class="py-5 text-center container">
+      <div class="jumbotron">
+        <div class="row py-lg-5">
+          <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light"><strong>조작방법</strong></h1>
+            <p class="lead text-muted">방향키 조작을 통해 이동할 수 있습니다.
+            <img src="ref/Images/방향키.png" alt=""/> 
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="py-5 text-center container">
-    <div class="jumbotron">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light"><strong>실행방법</strong></h1>
-          <h4>1. zip 파일 압축 해제</h4>
-          <p class="lead text-muted">'3D 구경 시작하기' 버튼 클릭시 다운로드 된 zip 파일을 압축 해제합니다.
-          <h4>2. 파일 실행</h4>
-          <p class="lead text-muted">매물번호와 같은 파일을 실행합니다.
-          <img src="ref/Images/no1way.png" alt=""/>
+    </section>
+    <section class="py-5 text-center container">
+      <div class="jumbotron">
+        <div class="row py-lg-5">
+          <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light"><strong>실행방법</strong></h1>
+            <h4>1. zip 파일 압축 해제</h4>
+            <p class="lead text-muted">'3D 구경 시작하기' 버튼 클릭시 다운로드 된 zip 파일을 압축 해제합니다.
+            <h4>2. 파일 실행</h4>
+            <p class="lead text-muted">매물번호와 같은 파일을 실행합니다.
+            <img src="ref/Images/no1way.png" alt=""/>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
   <footer class="text-muted py-5">
     <div class="container">
       <p class="float-end mb-1">
@@ -106,5 +107,5 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
