--- a/inf2.html
+++ b/inf2.html
@@ -42,7 +42,7 @@
 <body>   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="ref/images/logo.png" width="35" height="30" class="d-inline-block align-text-top">
         메타부동산</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
         </ul>
       </div>
@@ -74,50 +74,50 @@
             </div>
           </div>
           <table class="table" id="vertical-1">
-              <tr>
-                <th>매물특징</th>
-                <td>급매 세안고매매 기본상태 신촌초인접 상권교통최고</td>
-              </tr>
-              <tr>
-                <th>공급/전용면적</th>
-                <td>33.9평/25.7평(전용률76%)</td>
-              </tr>
-              <tr>
-                <th>해당층/총층</th>
-                <td>중/16층</td>
-              </tr>
-              <tr>
-                <th>방수/욕실수</th>
-                <td>3/2개</td>
-              </tr>
-              <tr>
-                <th>방향</th>
-                <td>남향(거실 기준)</td>
-              </tr>
-              <tr>
-                <th>현관구조</th>
-                <td>계단식</td>
-              </tr>
-              <tr>
-                <th>난방(방식/연료)</th>
-                <td>지역난방/열병합</td>
-              </tr>
-              <tr>
-                <th>입주가능일</th>
-                <td>2023년 5월 16일 협의 가능</td>
-              </tr>
-              <tr>
-                <th>총주차대수</th>
-                <td>266대(세대당 1.04대)</td>
-              </tr>
-              <tr>
-                <th>해당면적 세대수</th>
-                <td>254세대</td>
-              </tr>
-              <tr>
-                <th>매물번호</th>
-                <td>2214858830</td>
-              </tr>
+            <tr>
+              <th>매물특징</th>
+              <td>급매 세안고매매 기본상태 신촌초인접 상권교통최고</td>
+            </tr>
+            <tr>
+              <th>공급/전용면적</th>
+              <td>33.9평/25.7평(전용률76%)</td>
+            </tr>
+            <tr>
+              <th>해당층/총층</th>
+              <td>중/16층</td>
+            </tr>
+            <tr>
+              <th>방수/욕실수</th>
+              <td>3/2개</td>
+            </tr>
+            <tr>
+              <th>방향</th>
+              <td>남향(거실 기준)</td>
+            </tr>
+            <tr>
+              <th>현관구조</th>
+              <td>계단식</td>
+            </tr>
+            <tr>
+              <th>난방(방식/연료)</th>
+              <td>지역난방/열병합</td>
+            </tr>
+            <tr>
+              <th>입주가능일</th>
+              <td>2023년 5월 16일 협의 가능</td>
+            </tr>
+            <tr>
+              <th>총주차대수</th>
+              <td>266대(세대당 1.04대)</td>
+            </tr>
+            <tr>
+              <th>해당면적 세대수</th>
+              <td>254세대</td>
+            </tr>
+            <tr>
+              <th>매물번호</th>
+              <td>2214858830</td>
+            </tr>
           </table>
           <a href="no2-3d.html" type="button" class="btn btn-outline-secondary">3D 구경하기</a>
         </div>
@@ -133,5 +133,5 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
