--- a/no2-3d.html
+++ b/no2-3d.html
@@ -42,7 +42,7 @@
 <body>   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="ref/images/logo.png" width="35" height="30" class="d-inline-block align-text-top">
         메타부동산</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
         </ul>
       </div>
@@ -64,10 +64,9 @@
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light"><strong>3D 구경</strong></h1>
           <p class="lead text-muted">메타부동산은 매물의 정보를 확인하고 Unity를 통해 3D로 직접 집 내부를 체험할 수 있게 합니다.</p>
-            <a href="C:\Users\minhopark\Desktop\캡스톤디자인\2214858830.zip" type="button" class="btn btn-outline-secondary">3D 구경 시작하기</a>
-            <a href="inf2.html" type="button" class="btn btn-outline-secondary">상세정보</a>
-           <img src="ref/Images/explain2.png" alt=""/>    
-          </div>
+          <a href="C:\Users\minhopark\Desktop\캡스톤디자인\2214858830.zip" type="button" class="btn btn-outline-secondary">3D 구경 시작하기</a>
+          <a href="inf2.html" type="button" class="btn btn-outline-secondary">상세정보</a>
+          <img src="ref/Images/explain2.png" alt=""/>    
         </div>
       </div>
     </div>
@@ -78,7 +77,7 @@
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1 class="fw-light"><strong>조작방법</strong></h1>
           <p class="lead text-muted">방향키 조작을 통해 이동할 수 있습니다.
-           <img src="ref/Images/방향키.png" alt=""/> 
+          <img src="ref/Images/방향키.png" alt=""/> 
         </div>
       </div>
     </div>
@@ -106,5 +105,5 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
